# rust_dtp_sc_demo

./: .dockerignore  .gitignore  .gitmodules  Makefile  config.json  dockerfile  readme.md  test.py
aitrans-server/: run_client.sh  run_server.sh
aitrans-server/demo/: solution.cxx
aitrans-server/trace/block_trace/: aitrans_block.txt  config.py
dtp_client/: Cargo.toml  readme.md
dtp_client/src/: main.rs
dtp_client_new_tcp/: Cargo.toml  readme.md
dtp_client_new_tcp/src/: loopbytes.rs  main.rs  streamparser.rs
dtp_server/: Cargo.toml  readme.md
dtp_server/demo/: solution.cxx  solution.hxx
dtp_server/src/: build.rs  main.rs
dtp_utils/: Cargo.toml  readme.md
dtp_utils/include/: dtp_config.h
dtp_utils/src/: build.rs  dtp_config.c  lib.rs
evaluate/: config.json  main.py  readme.md
