[package]
name = "dtp_client"
version = "0.1.0"
authors = ["simonkorl <machuan0228@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std"] }
ring = "0.16"
quiche = { path = "../deps/dtp", version = "0.2.0", features=["boringssl-vendored", "fec"]}
time = "0.1"
mio = "0.6"
url = "1"
env_logger = "0.6"
docopt = "1"